# advent-of-code-2023

./: README.md  rustfmt.toml
firmware/: Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: lib.rs  rpc.rs
host/: Cargo.toml
host/src/: lib.rs  rpc.rs
icd/: Cargo.toml
icd/src/: lib.rs
input/: day3test.txt
