[package]
name = "aoc-2023-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nusb = "0.1.1"
tokio = { version = "1.34.0", features = ["full"] }
aoc-2023-icd = { path = "../icd" }
postcard = {version = "1.0.8", features = ["use-std"] }
serde = "1.0.193"
defmt = "0.3"
heapless = { version = "0.7.0", features = ["serde"] }
postcard-rpc = { version = "0.3.1", features = ["use-std"] }
cobs = "0.2.3"
